--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,43 @@
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.so
+
+# Virtual environments
 .venv/
-.env
-.DS_Store
+venv/
+
+# Packaging
+*.egg-info/
+dist/
+build/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Jupyter
 .ipynb_checkpoints/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+
+# Logs
 *.log
-*.csv
-*.parquet
-.streamlit/
+
+# Data folders (adjust if needed later)
 data/raw/*
 data/processed/*
 !data/raw/.gitkeep
 !data/processed/.gitkeep
+
+# Streamlit
+.streamlit/
+
