--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,7 @@ jobs:
         with:
           python-version: "3.11"
       - run: python -m pip install -U pip
-      - run: pip install -e .
-      - run: python -c "import synora; print('ok')"
+      - run: pip install -e ".[dev]"
+      - run: python -c "import synora; print(synora.__version__)"
+      - run: ruff check .
+      - run: pytest -q
